# rotate

./: CMakeLists.txt  README.md  main.c
asm/: mrotate.asm  rotate.asm
inc/: bitmap_io.h  errors.h  structures.h  utilities.h
src/: bitmap_io.c  structures.c  utilities.c
